hphp/test/zend/good/tests/classes/property_override_protectedStatic_protected.php.expectf

Fatal error: Cannot redeclare static A::$p as non-static B::$p in %s/property_override_protectedStatic_protected.php on line 11
